# RosProjects

./: README.md
20241006/devel/: .catkin  .rosinstall  local_setup.sh
20241006/devel/lib/my_first_pkg/: hello_node
20241006/devel/lib/pkgconfig/: my_first_pkg.pc
20241006/src/my_first_pkg/: CMakeLists.txt  package.xml
20241006/src/my_first_pkg/src/: hello.cpp
20241009/devel/: .catkin  local_setup.sh  setup.sh
20241009/devel/lib/hello/: hello_c
20241009/devel/lib/pkgconfig/: hello.pc
20241009/src/hello/: CMakeLists.txt
20241009/src/hello/launch/: hh.launch
20241009/src/hello/src/: hh.cpp
20241105/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
20241105/devel/include/hello_world/: person.h
20241105/devel/include/server_client/: AddInts.h  AddIntsRequest.h  AddIntsResponse.h
20241105/devel/lib/hello_world/: hello_world_node  listen  msg  sub  talk
20241105/devel/lib/pkgconfig/: hello_world.pc  server_client.pc
20241105/devel/lib/server_client/: client  get  getwg  server  set  wg
20241105/src/hello_world/: CMakeLists.txt
20241105/src/hello_world/msg/: person.msg
20241105/src/hello_world/src/: listen.cpp  msg.cpp  sub.cpp  talk.cpp
20241105/src/server_client/: CMakeLists.txt
20241105/src/server_client/launch/: wg.launch
20241105/src/server_client/src/: client.cpp  get.cpp  getwg.cpp  server.cpp  set.cpp  wg.cpp
demo_ws/: launch_demo.sh
demo_ws/devel/: .catkin  local_setup.sh  setup.sh
demo_ws/devel/include/demo_pkg/: RobotStatus.h
demo_ws/devel/lib/demo_pkg/: pub  sub
demo_ws/devel/lib/pkgconfig/: demo_pkg.pc
demo_ws/src/demo_pkg/: CMakeLists.txt  package.xml
demo_ws/src/demo_pkg/include/: MyPublisher.hpp  MySubscriber.hpp
demo_ws/src/demo_pkg/launch/: launch_demo.launch
demo_ws/src/demo_pkg/msg/: RobotStatus.msg
demo_ws/src/demo_pkg/src/: myPublisher.cpp  myPublisher_node.cpp  mySubscriber.cpp  mySubscriber_node.cpp
(+28 files in other folders)
